<resources>
    <string name="app_name">ClientStudent</string>
    <string name="error_select_student">Error select student...</string>
    <string name="error_insert_student">Error insert student...</string>
    <string name="error_update_student">Error update student...</string>
    <string name="error_delete_student">Error delete student...</string>
    <string name="success_insert_student">Insert success student with id: %s</string>
    <string name="success_update_student">Update success student with id: %s</string>
    <string name="success_delete_student">Delete success student with id: %s</string>
    <string name="success_select_student">Fetch students success</string>
    <string name="success_connected">Connected!</string>
    <string name="title_toolbar">Management</string>
    <string name="item_add_student">Add student</string>
    <string name="text_age">Age:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_update">Update student</string>
    <string name="title_management">Management</string>
    <string name="title_insert">Insert student</string>
    <string name="hint_search">Search student</string>
    <string name="hint_age_student">Age student</string>
    <string name="hint_score_math">Score math</string>
    <string name="hint_score_physical">Score physical</string>
    <string name="hint_score_chemistry">Score chemistry</string>
    <string name="hint_score_english">Score english</string>
    <string name="hint_score_literature">Score literature</string>
    <string name="button_add_student">Add student</string>
    <string name="button_update_student">Update student</string>
    <string name="hint_name_student">Name student</string>
    <string name="insert_success"> Insert successful!</string>
    <string name="insert_error">Insert error!</string>
    <string name="score_math">Math:</string>
    <string name="score">Score</string>
    <string name="score_physical">Physical:</string>
    <string name="score_chemistry">Chemistry:</string>
    <string name="score_literature">Literature:</string>
    <string name="score_english">English:</string>
    <string name="text_btn_connect_server">Connect Server</string>
    <string name="dialog_message">You want to delete or update this student?</string>
    <string name="dialog_title">Update or delete student </string>
    <string name="dialog_message_delete">You want to delete this student?</string>
    <string name="dialog_title_delete">Delete student </string>
    <string name="posi_delete">Delete</string>
    <string name="posi_update">Update</string>
    <string name="posi_yes">Yes</string>
    <string name="nav_no">No</string>
    <string name="mess_delete_success"> Delete successful!</string>
    <string name="mess_delete_unsuccess"> Delete unsuccessful!</string>
    <string name="mess_update_success"> Update successful!</string>
    <string name="mess_update_unsuccess"> Update unsuccessful!</string>
    <string name="dialog_message_update">You want to update this student?</string>
    <string name="dialog_title_update">Update student </string>
    <string name="name_null">Name is null!Please input name is valid!</string>
    <string name="name_lenght">Lenght name is more than 10!Please input name is valid!</string>
    <string name="age_null">Age is null!Please input age is valid!</string>
    <string name="age_error">Age is better than 10 and lower 30!Please input name is valid!</string>
    <string name="score_null">Score is null!Please input name is valid!</string>
    <string name="score_error">Score is better or equal 0 and lower or equal 100!Please input score is valid!</string>
    <string name="valid_name">Please input name is valid!</string>
    <string name="valid_age">Please input age is valid!</string>
    <string name="valid_score">Please input score is valid!</string>
    <string name="valid_success"> Valid success!</string>
</resources>