<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/studentsFragment">

    <fragment
        android:id="@+id/insertFragment"
        android:name="com.example.clientstudent.screen.fragment.InsertFragment"
        android:label="@string/title_insert"
        tools:layout="@layout/fragment_insert">
        <action
            android:id="@+id/action_insertFragment_to_studentsFragment"
            app:destination="@id/studentsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/studentsFragment"
        android:name="com.example.clientstudent.screen.fragment.StudentsFragment"
        android:label="@string/title_management"
        tools:layout="@layout/fragment_students">
        <action
            android:id="@+id/action_studentsFragment_to_insertFragment"
            app:destination="@id/insertFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_studentsFragment_to_updateFragment"
            app:destination="@id/updateFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.example.clientstudent.screen.fragment.UpdateFragment"
        android:label="@string/title_update">
        <action
            android:id="@+id/action_updateFragment_to_studentsFragment"
            app:destination="@id/studentsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
        <argument
            android:name="student"
            app:argType="com.example.aidllibrary.entity.Student" />
    </fragment>
</navigation>